examples/valid/prueba_precedencia.casc
programa {
  entero resultado1 = 2 + 3 * 4;
  entero resultado2 = (2 + 3) * 4;

  escribe resultado1;
  escribe resultado2;
}