examples/invalid/lexical/caracter_invalido.casc
programa {
  entero numero = 1 @ 2;
}
